# ogma-console

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  flight-phase-detection.md  project-log.md
docs/testing/: HIL_TEST_CAMPAIGN.md  README.md  TEST_RUN_TEMPLATE.md
docs/testing/results/: 2026-07-12-board-bring-up.md  2026-07-14-croi-mission-configuration.md  (+4 more)
ogma_app/: __init__.py  board_tests.py  boards.py  can_decoder.py  can_layouts.py  cli.py  controller.py  croi_flash.py  diagnostics.py  fault_ledger.py  flight_manifest.py  flight_package.py  groundstation.py  health.py  identity.py  lamh_config.py  mission_config.py  mission_replay.py  openocd.py  paths.py  preflight.py  probe.py  serial_capture.py  snapshots.py  status_blocks.py  teachtaire_config.py  telemetry.py  toolchain.py  ui.py  validation.py  verification.py
ogma_app/data/: CAN_Frames.h  dependencies.lock.json  payload_layouts.csv
ogma_app/native/: flight_replay.cpp
tests/: test_board_tests.py  test_boards.py  test_can_decoder.py  test_can_layouts.py  test_controller.py  test_croi_flash.py  test_diagnostics.py  test_fault_ledger.py  test_flight_manifest.py  test_flight_package.py  test_groundstation.py  test_health.py  test_identity.py  test_lamh_config.py  test_mission_config.py  test_mission_replay.py  test_openocd_parse.py  test_paths.py  test_preflight.py  test_probe.py  test_radio_protocol.py  test_snapshots.py  test_status_blocks.py  test_teachtaire_config.py  test_telemetry.py  test_toolchain.py  test_ui_state.py  test_validation.py  test_verification.py
